# MOSbiusCADFlow

./: .gitignore  BitStream.py  DDFlow2.code-workspace  MobiusCADFlow-repo_minibeastie-workspace.code-workspace  README.md  README.md~  m2k_streamout_digital_probe2.py  m2k_streamout_mixed_probe.py  m2k_streamout_utils.py  streamout_m2k.py  streamout_sandbox.ipynb
LTspice/MOSbius_chip_library/: CS_nMOS_4x_A.asy  CS_nMOS_4x_B.asy  CS_pMOS_4x_A.asy  README.md  (+22 more)
MOSbiusTools/: README.md  pyproject.toml  pyproject_orig.toml  test.json
MOSbiusV2Tools/: README.md  pyproject.toml
MOSbiusV2Tools/MOSbiusV2Tools/commandline/: requirements.txt  setup.py  setup_old.py
MOSbiusV2Tools/MOSbiusV2Tools/commandline/pk_testing/: test.cir
MOSbiusV2Tools/MOSbiusV2Tools/commandline/src/: generate_sizes_probe_subckt.py
MOSbiusV2Tools/MOSbiusV2Tools/tmp/: connections_to_PROBE_sw_matrix_subckt.ipynb  connections_to_pins_to_RBUS_SWBUS_subckt.ipynb  connections_to_subckt.ipynb  csv_to_dictionaries.ipynb  generated_circuit.cir  generated_register_settings.json  generated_set_sizes_PROBE.cir
MOSbiusV2Tools/commandline/src/: generate_switch_matrix_probe_subckt.py
MOSbiusV2Tools/commandline/src/commandline/: generate_pins_to_RBUS_SBUS_subckt.py  generate_sizes_probe_subckt.py
bitstream_catalog/: mota_schem_hxs.txt
cir_to_connections/: cir_to_connections.py
example_modules/: BitStream_Mobius_Intro.html  BitStream_Mobius_Intro.ipynb  m2k_streamout_mixed_probe.py
examples/: BitStream_Mobius_Intro.ipynb
netlist_catalog/: inv1x_schem_nl.txt  mota_schem_nl.txt  swmxtst_npmirror_nl.txt
(+200 files in other folders)
